--- a/design/design/Views/Shared/_Layout.cshtml
+++ b/design/design/Views/Shared/_Layout.cshtml
@@ -21,15 +21,21 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    @Html.ActionLink("Application name", "Index", "Home", null, new { @class = "navbar-brand" })
+                 
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li>@Html.ActionLink("About", "About", "Home")</li>
-                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                        <li>@Html.ActionLink("Startsida", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Nyheter", "About", "Home")</li>
+                        <li>@Html.ActionLink("Felanmälan", "Contact", "Home")</li>
+                        <li>@Html.ActionLink("Intresseanmälan", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Lediga objekt", "About", "Home")</li>
+                        <li>@Html.ActionLink("Våra fastigheter", "Contact", "Home")</li>
+                        <li>@Html.ActionLink("Frågor och svar", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Kontakta oss", "About", "Home")</li>
+                        <li>@Html.ActionLink("Om oss", "Contact", "Home")</li>
                     </ul>
-                    @Html.Partial("_LoginPartial")
+                   
                 </div>
             </div>
         </div>
