--- a/design/design/Views/Home/omoss.cshtml
+++ b/design/design/Views/Home/omoss.cshtml
@@ -6,4 +6,11 @@
 <h2>omoss</h2>
 
 <p>tjabbababdkjfhasldföä</p>
+<div><h1>EP fastigheter</h1>
+    <p>äger och förvaltar fastigheter i Örebro / Brickebacken<br />
+För intresseanmälan och mer information</p>
+    </div>
+<div><h1>Studentboende</h1></div>
+
+<div><h1>Seniorboende Nära till</h1></div>
 
