--- a/design/design/Views/Home/omoss.cshtml
+++ b/design/design/Views/Home/omoss.cshtml
@@ -3,14 +3,28 @@
     ViewBag.Title = "omoss";
 }
 
-<h2>omoss</h2>
+<center><h2>Om oss</h2>
 
-<p>tjabbababdkjfhasldföä</p>
-<div><h1>EP fastigheter</h1>
-    <p>äger och förvaltar fastigheter i Örebro / Brickebacken<br />
-För intresseanmälan och mer information</p>
+<a href="url"><img src="bild.jpg" /></a></center><!--här ska jag lägga in bilden när jag kommer på hur jag ska göra hehe...-->
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-4">
+            <h3>Studentboende</h3>
+            <p>Lorem ipsum dolor..</p>
+            <p>LÄNK</p>
+        </div>
+        <div class="col-sm-4">
+            <h3>Seniorboende Nära till</h3>
+            <p>Vi hoppas att ditt besök på vår hemsida ska ge dig en bra bild av vad du kan vänta dig av att bo i en av våra lägenheter.
+               Hos oss på Nära Till blir livet lite enklare och trevligare. Närheten till andra seniorer, ett rikt utbud av aktiviteter, gemensamhetslokal och vår hjälpsamma värdinna gör att det är lätt att trivas.</p>
+            <p>LÄNK</p>
+        </div>
+        <div class="col-sm-4">
+            <h3>EP-Fastigheter</h3>
+            <p>äger och förvaltar fastigheter i Örebro / Brickebacken. För intresseanmälan och mer information</p>
+            <p>LÄNK</p>
+        </div>
     </div>
-<div><h1>Studentboende</h1></div>
-
-<div><h1>Seniorboende Nära till</h1></div>
+</div>
 
