--- a/design/design/Views/Home/omoss.cshtml
+++ b/design/design/Views/Home/omoss.cshtml
@@ -3,9 +3,11 @@
     ViewBag.Title = "omoss";
 }
 
-<center><h2>Om oss</h2>
+<center>
+    <h2>Om oss</h2>
 
-<a href="url"><img src="bild.jpg" /></a></center><!--här ska jag lägga in bilden när jag kommer på hur jag ska göra hehe...-->
+    <img class="img-responsive" src="bild.jpg" alt=""></center>
+<!--här ska jag lägga in bilden när jag kommer på hur jag ska göra hehe...-->
 
 <div class="container">
     <div class="row">
