--- a/design/design/Views/Home/Kontakt.cshtml
+++ b/design/design/Views/Home/Kontakt.cshtml
@@ -3,6 +3,45 @@
     ViewBag.Title = "Kontakt";
 }
 
-<h2>Kontakt</h2>
+<center><h2>Kontakt</h2></center>
 
-<p>test</p>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-4">
+            <h3>John EKströms bygg AB</h3>
+            <p>Org nr 556212-0468
+               Ormestagatan 1B
+               702 83 Örebro</p>
+            <style>
+                .google-maps {
+                    position: relative;
+                    padding-bottom: 75%;
+                    //This is the aspect ratio height: 0;
+                    overflow: hidden;
+                }
+
+                    .google-maps iframe {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100% !important;
+                        height: 100% !important;
+                    }
+            </style>
+            <div class="google-maps">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7098.94326104394!2d78.0430654485247!3d27.172909818538997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1385710909804" width="600" height="450" frameborder="0" style="border:0"></iframe>
+            </div>            
+        </div>
+        <div class="col-sm-4">
+            <h3>Kontorets Öppettider</h3>
+            <p>Måndag - Fredag: 07:30-16.30
+               Telefontid: 09.00-16.00
+               Lunchstängt: 12.00-13.00</p>
+        </div>
+        <div class="col-sm-4">
+            <h3>Telefon</h3>
+            <p>Telefon: 019 16 43 70
+               Jourtelefon efter kontorstid:
+               010 470 57 58
+        </div>
+    </div>
