la till en mall för alla som jobbar på kontoret. bilderna funkar inte här än

--- a/design/design/Views/Home/Kontakt.cshtml
+++ b/design/design/Views/Home/Kontakt.cshtml
@@ -45,3 +45,36 @@
                010 470 57 58
         </div>
     </div>
+
+    <div>
+        <br />
+        <br />
+        <br />
+        <br />
+       
+            <div class="col-sm-3">
+                <center><img class="img-responsive" src="bild.jpg" alt=""></center>
+                <h4>Namn</h4>
+                <p>Roll</p>
+                <p>E-post</p>
+            </div>
+            <div class="col-sm-3">
+                <center><img class="img-responsive" src="bild.jpg" alt=""></center>
+                <h4>Namn</h4>
+                <p>Roll</p>
+                <p>E-post</p>
+            </div>
+            <div class="col-sm-3">
+                <center><img class="img-responsive" src="bild.jpg" alt=""></center>
+                <h4>Namn</h4>
+                <p>Roll</p>
+                <p>E-post</p>
+            </div>
+            <div class="col-sm-3">
+                <center><img class="img-responsive" src="bild.jpg" alt=""></center>
+                <h4>Namn</h4>
+                <p>Roll</p>
+                <p>E-post</p>
+            </div>
+        
+    </div>
