lagt upp bild på omoss

--- a/design/design/Views/Home/Kontakt.cshtml
+++ b/design/design/Views/Home/Kontakt.cshtml
@@ -41,7 +41,7 @@
         <div class="col-sm-4">
             <h3>Telefon</h3>
             <p>Telefon: 019 16 43 70
-               Jourtelefon efter kontorstid:
+               Jourtelefon efter kontorstid:</br>
                010 470 57 58
         </div>
     </div>
