--- a/design/design/Views/Home/omoss.cshtml
+++ b/design/design/Views/Home/omoss.cshtml
@@ -6,8 +6,8 @@
 <center>
     <h2>Om oss</h2>
 
-    <img class="img-responsive" src="bild.jpg" alt=""></center>
-<!--här ska jag lägga in bilden när jag kommer på hur jag ska göra hehe...-->
+    <img class="img-responsive" src="~/Content/Images/omossbild.jpg" alt=""></center>
+
 
 <div class="container">
     <div class="row">
