--- a/design/design/Views/Home/Index.cshtml
+++ b/design/design/Views/Home/Index.cshtml
@@ -1,52 +1,101 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-<link href="~/Content/bootstrap.css" rel="stylesheet" />
+<div class="sidbakgrund" style="background-color: white;">
     <div style=" text-align: center;"><h1>Startsida</h1></div>
-    
+
 
     <div class="row">
         <div class="col-md-6">
-            <h2 style="text-align:center;">För folk som tycker om att bo!</h2>
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                <!-- Carousel indicators -->
-                <ol class="carousel-indicators">
-                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#myCarousel" data-slide-to="1"></li>
-                    <li data-target="#myCarousel" data-slide-to="2"></li>
-                </ol>
-                <!-- Wrapper for carousel items -->
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img src="~/Content/Images/The-Shoals-Course-1613273.jpg" alt="First Slide">
+            <h2 style="text-align:center;">För dig som tycker om att bo!</h2>
+
+            <div class="container">
+                <div id="myCarousel1" class="carousel slide" data-interval="false">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li class="item1 active"></li>
+                        <li class="item2"></li>
+                        <li class="item3"></li>
+                        <li class="item4"></li>
+                        <li class="item5"></li>
+                    </ol>
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img src="~/Content/Images/Blaslampan%202%20-%203.jpg" alt="Chania">
+                        </div>
+
+                        <div class="item">
+                            <img src="~/Content/Images/Brandstationen%206%20-%203.jpg" alt="Chania">
+                        </div>
+                        <div class="item">
+                            <img src="~/Content/Images/Fetknoppen%202%20-%202.jpg" alt="Flower">
+                        </div>
+                        <div class="item">
+                            <img src="~/Content/Images/Krakan%209%20-%201.jpg" alt="Flower">
+                        </div>
+                        <div class="item">
+                            <img src="~/Content/Images/Liljan%209%20-%201.jpg" alt="Flower">
+                        </div>
                     </div>
-                    <div class="item">
-                        <img src="~/Content/Images/the-shoals-course-1613272_960_720.jpg" alt="Second Slide">
-                    </div>
-                    <div class="item">
-                        <img src="~/Content/Images/Golf_ball_grass.jpg" alt="Third Slide">
-                    </div>
+
+                    <!-- Left and right controls -->
+                    <a class="carousel-control left" href="#myCarousel1" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                    </a>
+                    <a class="carousel-control right" href="#myCarousel1" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                    </a>
                 </div>
-                <!-- Carousel controls -->
-                <a class="carousel-control left" href="#myCarousel" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
-                </a>
-                <a class="carousel-control right" href="#myCarousel" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
-                </a>
             </div>
-            <p>Hyr din bostad</p>
-            <ul>
-                <li>Trygghet</li>
-                <li>Frihet</li>
-                <li>Service</li>
-            </ul>
-            <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+            <div style="margin-left: 3%;">
+                <h3>Hyr din bostad</h3>
+                <ul style="list-style:none;">
+                    <li>Trygghet</li>
+                    <li>Frihet</li>
+                    <li>Service</li>
+                </ul>
+                <h4><i>En grym boendeform!</i></h4>
+            </div>
+
         </div>
         <div class="col-md-6">
-            <h2 style="text-align: center;">Get more libraries</h2>
-            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-            <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+            <h2 style="text-align: center;">Varför ska man hyra av oss?</h2>
+            <p>Har ägande, skötsel och drift i egen regi.</p>
+            <p>Har lång erfarenhet av hyresfastigheter och hyresgäster.</p>
         </div>
-      
+
     </div>
+</div>
+<script>
+    $(document).ready(function () {
+        // Activate Carousel
+        $("#myCarousel1").carousel({ interval: false });
+
+        // Enable Carousel Indicators
+        $(".item1").click(function () {
+            $("#myCarousel1").carousel(0);
+        });
+        $(".item2").click(function () {
+            $("#myCarousel1").carousel(1);
+        });
+        $(".item3").click(function () {
+            $("#myCarousel1").carousel(2);
+        });
+        $(".item4").click(function () {
+            $("#myCarousel1").carousel(3);
+        });
+        $(".item5").click(function () {
+            $("#myCarousel1").carousel(4);
+        });
+
+        // Enable Carousel Controls
+        $(".left").click(function () {
+            $("#myCarousel1").carousel("prev");
+        });
+        $(".right").click(function () {
+            $("#myCarousel1").carousel("next");
+        });
+    });
+</script>
