--- a/design/design/Views/Home/Kontakt.cshtml
+++ b/design/design/Views/Home/Kontakt.cshtml
@@ -9,9 +9,11 @@
     <div class="row">
         <div class="col-sm-4">
             <h3>John EKströms bygg AB</h3>
-            <p>Org nr 556212-0468
-               Ormestagatan 1B
-               702 83 Örebro</p>
+            <p>
+                Org nr 556212-0468
+                Ormestagatan 1B
+                702 83 Örebro
+            </p>
             <style>
                 .google-maps {
                     position: relative;
@@ -30,19 +32,22 @@
             </style>
             <div class="google-maps">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7098.94326104394!2d78.0430654485247!3d27.172909818538997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1385710909804" width="600" height="450" frameborder="0" style="border:0"></iframe>
-            </div>            
+            </div>
         </div>
         <div class="col-sm-4">
             <h3>Kontorets Öppettider</h3>
-            <p>Måndag - Fredag: 07:30-16.30
-               Telefontid: 09.00-16.00
-               Lunchstängt: 12.00-13.00</p>
+            <p>
+                Måndag - Fredag: 07:30-16.30
+                Telefontid: 09.00-16.00
+                Lunchstängt: 12.00-13.00
+            </p>
         </div>
         <div class="col-sm-4">
             <h3>Telefon</h3>
-            <p>Telefon: 019 16 43 70
-               Jourtelefon efter kontorstid:</br>
-               010 470 57 58
+            <p>
+                Telefon: 019 16 43 70
+                Jourtelefon efter kontorstid:</br>
+                010 470 57 58
         </div>
     </div>
 
@@ -51,30 +56,75 @@
         <br />
         <br />
         <br />
-       
+        <h3>Vi som jobbar på kontoret</h3>
+        <div class="row">
             <div class="col-sm-3">
-                <center><img class="img-responsive" src="bild.jpg" alt=""></center>
-                <h4>Namn</h4>
-                <p>Roll</p>
-                <p>E-post</p>
+                <center><img class="img-responsive" src="~/Content/Images/Stieg.jpg" alt=""></center>
+                <h4>Stieg Ekström</h4>
+                <p>
+                    VD<br>
+                    stieg@je-bygg.se
+                </p>
             </div>
             <div class="col-sm-3">
-                <center><img class="img-responsive" src="bild.jpg" alt=""></center>
-                <h4>Namn</h4>
-                <p>Roll</p>
-                <p>E-post</p>
+                <center><img class="img-responsive" src="~/Content/Images/Anna.jpg" alt=""></center>
+                <h4>Anna Ekström</h4>
+                <p>
+                    Hyresinbetalningar<br />
+                    Personalansvarig<br />
+                    019 - 16 43 72<br />
+                    anna@je-bygg.se
+                </p>
             </div>
             <div class="col-sm-3">
-                <center><img class="img-responsive" src="bild.jpg" alt=""></center>
-                <h4>Namn</h4>
-                <p>Roll</p>
-                <p>E-post</p>
+                <center><img class="img-responsive" src="~/Content/Images/Thor Mari.jpg" alt=""></center>
+                <h4>Mari Ekström Thor</h4>
+                <p>
+                    Ekonomichef/Kamrer<br />
+                    019 - 16 43 71<br />
+                    marie@je-bygg.se
+                </p>
             </div>
             <div class="col-sm-3">
-                <center><img class="img-responsive" src="bild.jpg" alt=""></center>
-                <h4>Namn</h4>
-                <p>Roll</p>
-                <p>E-post</p>
+                <center><img class="img-responsive" src="~/Content/Images/TungfeltLena02.jpg" alt=""></center>
+                <h4>Lena Ekström Tungfelt</h4>
+                <p>
+                    Fastighetsförvaltare<br />
+                    019 - 16 43 76 <br />
+                    lena@je-bygg.se
+                </p>
             </div>
-        
+            <div class="clearfix visible-sm"></div>
+                    <div class="col-sm-3">
+                        <center><img class="img-responsive" src="~/Content/Images/AnderssonAnnette.jpg" alt=""></center>
+                        <h4>Annette Andersson</h4>
+                        <p>Receptionist /<br />
+                           Bostadsförmedlare<br />
+                           019 - 16 43 70<br />
+                           info@je-bygg.se</p>
+                    </div>
+                    <div class="col-sm-3">
+                        <center><img class="img-responsive" src="~/Content/Images/RunellIrene.jpg" alt=""></center>
+                        <h4>Irene Runell</h4>
+                        <p>
+                            Ekonomiassistent<br />
+                            Leverantörsfakturor<br />
+                            019 - 16 43 74
+                        </p>
+                    </div>
+                    <div class="col-sm-3">
+                        <center><img class="img-responsive" src="~/Content/Images/Ottosson-Carina.jpg" alt=""></center>
+                        <h4>Carina Ottosson</h4>
+                        <p>
+                            Besiktningsansvarig<br>
+                            /Bostadsförmedlare<br />
+                            Kumla/Nora<br />
+                            070 - 410 40 11
+                        </p>
+                    </div>
+                </div>
+
+        </div><h3>Vi som jobbar med annat</h3>
     </div>
+        
+    
