Fix med headern

--- a/design/design/Views/Home/Index.cshtml
+++ b/design/design/Views/Home/Index.cshtml
@@ -62,8 +62,10 @@
         </div>
         <div class="col-md-6">
             <h2 style="text-align: center;">Varför ska man hyra av oss?</h2>
-            <p>Har ägande, skötsel och drift i egen regi.</p>
-            <p>Har lång erfarenhet av hyresfastigheter och hyresgäster.</p>
+            <div style="margin-left: 15%;">
+                <p>Har ägande, skötsel och drift i egen regi.</p>
+                <p>Har lång erfarenhet av hyresfastigheter och hyresgäster.</p>
+            </div>
         </div>
 
     </div>
