--- a/design/design/Views/Shared/_Layout.cshtml
+++ b/design/design/Views/Shared/_Layout.cshtml
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <p style="text-align:center">här ska det vara en bild på det fina huset du vill bo i Emma :D</p>
-        </header>
+         
+            <header><img src="~/Content/Images/headerje.png" style="width:100%;"></header>
+    
         <div class="navbar navbar-inverse">
             <div class="container">
                 <div class="navbar-header">
