--- a/design/design/Views/Home/Kontakt.cshtml
+++ b/design/design/Views/Home/Kontakt.cshtml
@@ -94,7 +94,8 @@
                     lena@je-bygg.se
                 </p>
             </div>
-            <div class="clearfix visible-sm"></div>
+            <!--<div class="clearfix visible-sm"></div>
+                VVARFÖR I HELVETE FUNKAR DET INTE!!!-->
                     <div class="col-sm-3">
                         <center><img class="img-responsive" src="~/Content/Images/AnderssonAnnette.jpg" alt=""></center>
                         <h4>Annette Andersson</h4>
