--- a/design/design/Views/Shared/_Layout.cshtml
+++ b/design/design/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li>@Html.ActionLink("Startsida", "Index", "Home")</li>
-                        <li>@Html.ActionLink("Nyheter", "About", "Home")</li>
+                        <li>@Html.ActionLink("Nyheter", "Nyheter", "Home")</li>
                         <li>@Html.ActionLink("Felanmälan", "Contact", "Home")</li>
                         <li>@Html.ActionLink("Intresseanmälan", "Index", "Home")</li>
                         <li>@Html.ActionLink("Lediga objekt", "About", "Home")</li>
