--- a/design/design/Views/Home/Kontakt.cshtml
+++ b/design/design/Views/Home/Kontakt.cshtml
@@ -63,8 +63,7 @@
                 <h4>Stieg Ekström</h4>
                 <p>
                     VD<br>
-                    stieg@je-bygg.se
-                </p>
+                    <a href="mailto:stieg@je-bygg.se" target="_blank">stieg@je-bygg.se</a></p>
             </div>
             <div class="col-sm-3">
                 <center><img class="img-responsive" src="~/Content/Images/Anna.jpg" alt=""></center>
@@ -94,8 +93,10 @@
                     lena@je-bygg.se
                 </p>
             </div>
+            </div>
             <!--<div class="clearfix visible-sm"></div>
                 VVARFÖR I HELVETE FUNKAR DET INTE!!!-->
+        <div class="row">
                     <div class="col-sm-3">
                         <center><img class="img-responsive" src="~/Content/Images/AnderssonAnnette.jpg" alt=""></center>
                         <h4>Annette Andersson</h4>
@@ -124,8 +125,9 @@
                         </p>
                     </div>
                 </div>
+    </div>
 
         </div><h3>Vi som jobbar med annat</h3>
-    </div>
+    
         
     
