dom som inte jobbar på kontoret

--- a/design/design/Views/Home/Kontakt.cshtml
+++ b/design/design/Views/Home/Kontakt.cshtml
@@ -8,7 +8,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-4">
-            <h3>John EKströms bygg AB</h3>
+            <h3>John Ekströms bygg AB</h3>
             <p>
                 Org nr 556212-0468
                 Ormestagatan 1B
@@ -31,8 +31,7 @@
                     }
             </style>
             <div class="google-maps">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7098.94326104394!2d78.0430654485247!3d27.172909818538997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1385710909804" width="600" height="450" frameborder="0" style="border:0"></iframe>
-            </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2039.109769794727!2d15.24361931589036!3d59.26431508163614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465c145150000001%3A0xb770228f3dd33593!2sJohn+Ekstr%C3%B6ms+Bygg+AB!5e0!3m2!1ssv!2sse!4v1492021207736" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>            </div>
         </div>
         <div class="col-sm-4">
             <h3>Kontorets Öppettider</h3>
@@ -46,7 +45,7 @@
             <h3>Telefon</h3>
             <p>
                 Telefon: 019 16 43 70
-                Jourtelefon efter kontorstid:</br>
+                Jourtelefon efter kontorstid:<br />
                 010 470 57 58
         </div>
     </div>
@@ -58,7 +57,7 @@
         <br />
         
 
-        <h3>Vi som jobbar på kontoret</h3>
+        <legend>Vi som jobbar på kontoret</legend>
         <div class="row">
             <div class="col-sm-3">
                 <center><img class="img-responsive" src="~/Content/Images/Stieg.jpg" alt=""></center>
@@ -127,9 +126,66 @@
                     </div>
                 </div>
     </div>
- 
+  </div>
+<br />
+<br />
+<legend>Vi som fixar och underhåller</legend>
+<div class="row">
+    <div class="col-sm-3">
+        <center><img class="img-responsive" src="~/Content/Images/Johansson-Patrik.jpg" alt=""></center>
+        <h4>Patrik Johansson</h4>
+    </div>
+    <div class="col-sm-3">
+        <center><img class="img-responsive" src="~/Content/Images/StrandbergMikael.jpg" alt=""></center>
+        <h4>Mikael Strandberg</h4>
+    </div>
+    <div class="col-sm-3">
+        <center><img class="img-responsive" src="~/Content/Images/BergTony.jpg" alt=""></center>
+        <h4>Tony Berg</h4>
+    </div>
+    <div class="col-sm-3">
+        <center><img class="img-responsive" src="~/Content/Images/WibergBenny.jpg" alt=""></center>
+        <h4>Benny Wiberg</h4>
+    </div>
+</div>
 
-        </div><h3>Vi som jobbar med annat</h3>
+<div class="row">
+    <div class="col-sm-3">
+        <center><img class="img-responsive" src="~/Content/Images/ErikssonPeder.jpg" alt=""></center>
+        <h4>Peder Eriksson</h4>
+    </div>
+    <div class="col-sm-3">
+        <center><img class="img-responsive" src="~/Content/Images/Gustafsson-Jan-Ake.jpg" /></center>
+        <h4>Jan-Åke Gustavsson</h4>
+    </div>
+    <div class="col-sm-3">
+        <center><img class="img-responsive" src="~/Content/Images/LarsenPeter.jpg" alt=""></center>
+        <h4>Peter Larsen</h4>
+    </div>
+    <div class="col-sm-3">
+        <center><img class="img-responsive" src="~/Content/Images/RunellHans.jpg" alt=""></center>
+        <h4>Hans Rünell</h4>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-sm-3">
+        <center><img class="img-responsive" src="~/Content/Images/Akerstrandorjan.jpg" alt=""></center>
+        <h4>Örjan Åkerstrand</h4>
+    </div>
+    <div class="col-sm-3">
+        <center><img class="img-responsive" src="~/Content/Images/LiljaGabriel.jpg" alt=""></center>
+        <h4>Gabriel Lilja</h4>
+    </div>
+    <div class="col-sm-3">
+        <center><img class="img-responsive" src="~/Content/Images/StenArnsheml.png" alt=""></center>
+        <h4>Sten Arnsheml</h4>
+    </div>
+    
+</div>
+
+<br />
+<br />    
 
 <div class="container">
 
@@ -140,7 +196,6 @@
             <legend>Kontakta oss idag!</legend>
 
             <!-- Text input-->
-
             <div class="form-group">
                 <label class="col-md-4 control-label">Namn</label>
                 <div class="col-md-4 inputGroupContainer">
@@ -217,7 +272,7 @@
                 <div class="col-md-4 inputGroupContainer">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
-                        <textarea class="form-control" name="comment" placeholder="Project Description"></textarea>
+                        <textarea class="form-control" name="comment" placeholder="Meddelande"></textarea>
                     </div>
                 </div>
             </div>
