--- a/design/design/Content/bootstrap.css
+++ b/design/design/Content/bootstrap.css
@@ -309,13 +309,13 @@ html {
   font-size: 62.5%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-
+/* "Helvetica Neue", Helvetica, Arial, sans-serif;*/
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.428571429;
   color: #333333;
-  background-color: #eeeeee;
+  background-color: #f7f7f7;
 }
 
 input,
@@ -1081,6 +1081,11 @@ pre code {
 @media (min-width: 992px) {
   .container {
     max-width: 970px;
+  }
+  .header
+  {
+      border-radius: 10px 10px 0px 0px;
+      background-color: black;
   }
   .col-md-1,
   .col-md-2,
@@ -4501,8 +4506,11 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse {
-  background-color: #f63f3f;
-  border-color: #f63f3f;
+  background-color: #eeeeee;
+  
+  border-bottom: 3px solid #ddd; 
+  border-left: 1px solid #ddd; 
+  border-right: 1px solid #ddd; 
 }
 
 .navbar-inverse .navbar-brand {
@@ -4520,13 +4528,13 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse .navbar-nav > li > a {
-  color: #fff;
+  color: #333333;
   font-size:medium;
 }
 
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
-  color: #ffffff;
+  color:#e95123;
   background-color: transparent;
 }
 
