--- a/design/design/Views/Home/Index.cshtml
+++ b/design/design/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
     <div class="row">
         <div class="col-md-6">
-            <h2 style="text-align:center;">För dig som tycker om att bo!</h2>
+            <h2 style="text-align:center; color:#e95123">För dig som tycker om att bo!</h2>
 
             <div class="container">
                 <div id="myCarousel1" class="carousel slide" data-interval="false">
@@ -49,23 +49,21 @@
                     </a>
                 </div>
             </div>
-            <div style="margin-left: 3%;">
-                <h3>Hyr din bostad</h3>
-                <ul style="list-style:none;">
-                    <li>Trygghet</li>
-                    <li>Frihet</li>
-                    <li>Service</li>
-                </ul>
-                <h4><i>En grym boendeform!</i></h4>
-            </div>
+      
 
         </div>
         <div class="col-md-6">
-            <h2 style="text-align: center;">Varför ska man hyra av oss?</h2>
+            <h2 style="text-align: center; color:#e95123">Varför ska man hyra av oss?</h2>
             <div style="margin-left: 15%;">
-                <p>Har ägande, skötsel och drift i egen regi.</p>
-                <p>Har lång erfarenhet av hyresfastigheter och hyresgäster.</p>
-            </div>
+                <p>Vi har ägande, skötsel och drift i egen regi.</p>
+                <p>Vi har lång erfarenhet av hyresfastigheter och hyresgäster.</p>
+                <br />
+                <br />
+                
+                <p style="font-size:x-large;">
+                    Att hyra din bostad är en grym boendeform som kommer ge dig <span style="color:#e95123">trygghet</span>, <span style="color:#e95123">frihet</span> och <span style="color:#e95123">service</span>!</p>
+
+</div>
         </div>
 
     </div>
