--- a/design/design/Views/Shared/_Layout.cshtml
+++ b/design/design/Views/Shared/_Layout.cshtml
@@ -12,9 +12,20 @@
 <body>
     <div class="container">
          
-            <header><img src="~/Content/Images/headerje.png" style="width:100%;"></header>
-    
+            <header>
+                <div class="container">
+                    <div class="row header" style="background-color: white;">
+                        <div class="col-md-2"><img src="~/Content/Images/JEbygg%20logga.png" /></div>
+                        <div class="col-md-10">
+                            <img src="~/Content/Images/headerje1.png" style="width:100%;">
+                        </div>
+                    </div>
+                </div></header>
+        
+      
+         
         <div class="navbar navbar-inverse">
+            
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -22,8 +33,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                 
-                </div>
+                    
+                                </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li>@Html.ActionLink("Startsida", "Index", "Home")</li>
