--- a/design/design/Views/Home/Kontakt.cshtml
+++ b/design/design/Views/Home/Kontakt.cshtml
@@ -260,7 +260,8 @@
                 <label class="col-md-4 control-label">Postort</label>
                 <div class="col-md-4 selectContainer">
                     <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+                        <span class="input-group-addon">
+                        <i class="glyphicon glyphicon-home"></i></span><br />
                         <input name="state" placeholder="Postort" class="form-control" type="text">
                         
                     </div>
