--- a/design/design/Views/Home/Index.cshtml
+++ b/design/design/Views/Home/Index.cshtml
@@ -2,8 +2,9 @@
     ViewBag.Title = "Home Page";
 }
 <div class="sidbakgrund" style="background-color: white;">
-    <div style=" text-align: center;"><h1>Startsida</h1></div>
-
+    <div style=" text-align: center;"><h3 class="sidrubrik">Startsida</h3></div>
+    <br />
+    <br />
 
     <div class="row">
         <div class="col-md-6">
@@ -19,7 +20,7 @@
                         <li class="item4"></li>
                         <li class="item5"></li>
                     </ol>
-
+                 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
@@ -53,8 +54,8 @@
 
         </div>
         <div class="col-md-6">
-            <h2 style="text-align: center; color:#e95123">Varför ska man hyra av oss?</h2>
-            <div style="margin-left: 15%;">
+            <h2 style="text-align: left; color:#e95123">Varför ska man hyra av oss?</h2>
+            <div>
                 <p>Vi har ägande, skötsel och drift i egen regi.</p>
                 <p>Vi har lång erfarenhet av hyresfastigheter och hyresgäster.</p>
                 <br />
