--- a/design/design/Views/Home/Nyheter.cshtml
+++ b/design/design/Views/Home/Nyheter.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="container">
-    <div style="text-align:center;"><h2>Nyheter</h2></div>
+    <div style="text-align:center;"><h3 class="sidrubrik">Nyheter</h3></div>
     <br />
     <br />
     <div style="text-align: center; margin-left:5%; margin-right: 5%;" >
