--- a/design/design/Views/Shared/_Layout.cshtml
+++ b/design/design/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
             <header>
                 <div class="container">
                     <div class="row header" style="background-color: white;">
-                        <div class="col-md-2"><img src="~/Content/Images/JEbygg%20logga.png" /></div>
+                        <div class="col-md-2"><img src="~/Content/Images/JEbygg%20logga.png"></div>
                         <div class="col-md-10">
                             <img src="~/Content/Images/headerje1.png" style="width:100%;">
                         </div>
@@ -39,13 +39,13 @@
                     <ul class="nav navbar-nav">
                         <li>@Html.ActionLink("Startsida", "Index", "Home")</li>
                         <li>@Html.ActionLink("Nyheter", "Nyheter", "Home")</li>
-                        <li>@Html.ActionLink("Felanmälan", "Contact", "Home")</li>
+                        <li>@Html.ActionLink("Felanmälan", "Felanmalan", "Home")</li>
                         <li>@Html.ActionLink("Intresseanmälan", "Index", "Home")</li>
                         <li>@Html.ActionLink("Lediga objekt", "About", "Home")</li>
                         <li>@Html.ActionLink("Våra fastigheter", "Contact", "Home")</li>
                         <li>@Html.ActionLink("Frågor och svar", "Index", "Home")</li>
-                        <li>@Html.ActionLink("Kontakta oss", "About", "Home")</li>
-                        <li>@Html.ActionLink("Om oss", "Contact", "Home")</li>
+                        <li>@Html.ActionLink("Kontakta oss", "Kontakt", "Home")</li>
+                        <li>@Html.ActionLink("Om oss", "omoss", "Home")</li>
                     </ul>
                    
                 </div>
