--- a/design/design/Views/Home/Felanmalan.cshtml
+++ b/design/design/Views/Home/Felanmalan.cshtml
@@ -12,7 +12,7 @@
         <div class="col-md-6">
             <div class="form-group">
                 <div>
-                    <label>Postort</label>
+                    <label>Namn: *</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
                         <input name="state" placeholder="Postort" class="form-control" type="text">
@@ -20,11 +20,24 @@
                 </div>
                 <br />
                 <div>
-                    <label>Adress</label>
+                    <label>Företagsnamn:</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
                         <input name="state" placeholder="Adress" class="form-control" type="text">
-
+                    </div>
+                </div>
+                <div>
+                    <label>Gatuadress: *</label>
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+                        <input name="state" placeholder="Adress" class="form-control" type="text">
+                    </div>
+                </div>
+                <div>
+                    <label>Företagsnamn:</label>
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+                        <input name="state" placeholder="Adress" class="form-control" type="text">
                     </div>
                 </div>
             </div>
