--- a/design/design/Views/Home/Kontakt.cshtml
+++ b/design/design/Views/Home/Kontakt.cshtml
@@ -257,7 +257,7 @@
             <!-- Select Basic -->
 
             <div class="form-group">
-                <label class="col-md-4 control-label">Postort</label>
+                <label class="col-md-4 control-label">Postort!</label>
                 <div class="col-md-4 selectContainer">
                     <div class="input-group">
                         <span class="input-group-addon">
