--- a/design/design/Views/Home/Kontakt.cshtml
+++ b/design/design/Views/Home/Kontakt.cshtml
@@ -12,7 +12,7 @@
             <p>
                 Org nr 556212-0468
                 Ormestagatan 1B
-                702 83 Örebro
+                702 83 Örebrolk
             </p>
             <style>
                 .google-maps {
