--- a/design/design/Views/Home/Index.cshtml
+++ b/design/design/Views/Home/Index.cshtml
@@ -1,6 +1,14 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+
+    <style>
+        .carousel {
+            width: 38%;
+            height: 38%;
+        }
+    </style>
+
 <div class="sidbakgrund" style="background-color: white;">
     <div style=" text-align: center;"><h3 class="sidrubrik">Startsida</h3></div>
     <br />
