--- a/design/design/Views/Shared/_Layout.cshtml
+++ b/design/design/Views/Shared/_Layout.cshtml
@@ -12,15 +12,14 @@
 <body>
     <div class="container">
          
-            <header>
-                <div class="container">
-                    <div class="row header" style="background-color: white;">
-                        <div class="col-md-2"><img src="~/Content/Images/JEbygg%20logga.png"></div>
-                        <div class="col-md-10">
-                            <img src="~/Content/Images/headerje1.png" style="width:100%;">
-                        </div>
-                    </div>
-                </div></header>
+      <div class="headern">
+          <div class="row header1" style="background-color: white;">
+              <div class="col-md-2"><img src="~/Content/Images/JEbygg%20logga.png"></div>
+              <div class="col-md-10">
+                  <img src="~/Content/Images/headerje1.png" style="width:100%;">
+              </div>
+          </div>
+                </div>
         
       
          
