--- a/design/design/Views/Home/Kontakt.cshtml
+++ b/design/design/Views/Home/Kontakt.cshtml
@@ -5,7 +5,7 @@
 
 <center><h2>Kontakt</h2></center>
 
-<div class="container">
+<div class="maincontainer">
     <div class="row">
         <div class="col-sm-4">
             <h3>John Ekströms bygg AB</h3>
@@ -187,7 +187,7 @@
 <br />
 <br />    
 
-<div class="container">
+<div class="maincontainer">
 
     <form class="well form-horizontal" action=" " method="post" id="contact_form">
         <fieldset>
