--- a/design/design/Views/Home/Index.cshtml
+++ b/design/design/Views/Home/Index.cshtml
@@ -1,13 +1,7 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-
-    <style>
-        .carousel {
-            width: 38%;
-            height: 38%;
-        }
-    </style>
+<link href="~/Content/Csskod.css" rel="stylesheet" />
 <div class="container">
    
         <div style=" text-align: center;"><h3 class="sidrubrik">Startsida</h3></div>
@@ -15,7 +9,7 @@
         <br />
 
         <div class="row">
-            <div class="col-md-5">
+            <div class="col-md-5 förstadiven">
                 <h2 style="text-align:center; color:#e95123">För dig som tycker om att bo!</h2>
 
                 <div class="mainbody">
