--- a/design/design/Content/bootstrap.css
+++ b/design/design/Content/bootstrap.css
@@ -2605,7 +2605,9 @@ input[type="search"] {
 div.header1{
         margin-right: 0px;
     margin-left: 0px;
+     border-radius: 10px 10px 0px 0px;
 }
+
 
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
   input[type="date"].form-control,
@@ -4178,7 +4180,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 @media (min-width: 768px) {
   .navbar {
-    border-radius: 4px;
+    /*border-radius: 4px;*/
   }
 }
 @media (min-width: 768px) {
@@ -4596,8 +4598,10 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #ccc;
 }
 .navbar-inverse {
-  background-color: #222;
-  border-color: #080808;
+  background-color: #eee;
+  border-color: #ddd;
+  border-bottom: 1px solid #ddd;
+  box-shadow: 0px 5px 5px #888888;
 }
 .navbar-inverse .navbar-brand {
   color: #9d9d9d;
@@ -4611,11 +4615,12 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #9d9d9d;
 }
 .navbar-inverse .navbar-nav > li > a {
-  color: #9d9d9d;
+  color: #232323;
+  font-size: medium;
 }
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
-  color: #fff;
+  color: #db1f1f;
   background-color: transparent;
 }
 .navbar-inverse .navbar-nav > .active > a,
