forstätter med felmeddelande

--- a/design/design/Views/Home/Felanmalan.cshtml
+++ b/design/design/Views/Home/Felanmalan.cshtml
@@ -15,7 +15,7 @@
                     <label>Namn: *</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-                        <input name="state" placeholder="Postort" class="form-control" type="text">
+                        <input name="state" placeholder="Namn" class="form-control" type="text">
                     </div>
                 </div>
                 <br />
@@ -26,6 +26,7 @@
                         <input name="state" placeholder="Adress" class="form-control" type="text">
                     </div>
                 </div>
+                <br />
                 <div>
                     <label>Gatuadress: *</label>
                     <div class="input-group">
@@ -33,13 +34,40 @@
                         <input name="state" placeholder="Adress" class="form-control" type="text">
                     </div>
                 </div>
+                <br />
                 <div>
-                    <label>Företagsnamn:</label>
+                    <label>Postnummer:</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
                         <input name="state" placeholder="Adress" class="form-control" type="text">
                     </div>
                 </div>
+                <br />
+                <div>
+                    <label>Postort:</label>
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+                        <input name="state" placeholder="Adress" class="form-control" type="text">
+                    </div>
+                </div>
+                <br />
+                <div>
+                    <label>Telefonnummer:</label>
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+                        <input name="state" placeholder="Adress" class="form-control" type="text">
+                    </div>
+                </div>
+                <br />
+                <div>
+                    <label>Epost:</label>
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+                        <input name="state" placeholder="Adress" class="form-control" type="text">
+                    </div>
+                </div>
+                <br />
+
             </div>
         </div>
         <div class="col-md-3">hejhej</div>
