nu syns footern

--- a/design/design/Views/Home/FragorOchSvar.cshtml
+++ b/design/design/Views/Home/FragorOchSvar.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "FragorOchSvar";
 }
 
-<h2>FragorOchSvar</h2>
+<h2>Frågor Och Svar</h2>
 <div class="maincontainer">
 
             <legend>För våra hyresgäster</legend>
@@ -395,6 +395,3 @@
 
         </div>
 
-
-
-</div>
