--- a/design/design/Views/Home/Nyheter.cshtml
+++ b/design/design/Views/Home/Nyheter.cshtml
@@ -3,17 +3,17 @@
     ViewBag.Title = "Nyheter";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="container">
-    <div style="text-align:center;"><h3 class="sidrubrik">Nyheter</h3></div>
+<div class="maincontainer">
+    <div style="text-align:center;"><h2 class="sidrubrik">Nyheter</h2></div>
     <br />
     <br />
-    <div style="text-align: center; margin-left:5%; margin-right: 5%;" >
+    <div class="nyhet" style="text-align: center; margin-left:5%; margin-right: 5%;">
         <h2>Glad påsk!</h2>
         <p style="text-align:left;">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum <br />Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
         <p style="text-align:right;">2017-04-12</p>
     </div>
-    <hr />
-    <div style="text-align: center; margin-left:5%; margin-right: 5%;">
+  <br />
+    <div class="nyhet" style="text-align: center; margin-left:5%; margin-right: 5%;">
         <h2>Glad påsk!</h2>
         <p style="text-align:left;">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum <br />Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
         <p style="text-align:right;">2017-04-10</p>    
