--- a/design/design/Views/Home/Felanmalan.cshtml
+++ b/design/design/Views/Home/Felanmalan.cshtml
@@ -5,11 +5,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Felanmalan</h2>
+<h2 class="sidrubrik">Felanmälan</h2>
 
-<div class="container">
+<div class="maincontainer">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 leftdiv">
             <div class="form-group">
                 <div>
                     <label>Namn: *</label>
@@ -66,8 +66,32 @@
                         <input name="state" placeholder="Adress" class="form-control" type="text">
                     </div>
                 </div>
-                <br />
+                <br /><div>
 
+    <label>Meddelande:</label>
+    <div class="input-group">
+        <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+        <textarea class="form-control" name="comment" placeholder="Meddelande"></textarea>
+    </div>
+                <br />
+    <div class="col-md-10">
+        @Html.CheckBox("CheckNyckel")
+        <label>Markera om vi får gå in med huvudnyckel.</label>
+    </div>
+    <div class="col-md-10">
+        @Html.CheckBox("CheckHund")
+        <label>Markera om ni har hund.</label>
+    </div>
+    <div class="col-md-10">
+        @Html.CheckBox("CheckKatt")
+        <label>Markera om ni har katt.</label>
+    </div>
+    <br />
+     <br />                   
+        <div class="col-md-4">
+            <button type="submit" class="btn btn-warning">Skicka <span class="glyphicon glyphicon-send"></span></button>
+        </div>
+</div>
             </div>
         </div>
         <div class="col-md-3">hejhej</div>
