--- a/design/design/Views/Home/FragorOchSvar.cshtml
+++ b/design/design/Views/Home/FragorOchSvar.cshtml
@@ -6,6 +6,22 @@
 <h2>Frågor Och Svar</h2>
 <div class="maincontainer">
 
+        <div class="row">
+            <div class="col-sm-6 col-sm-offset-3">
+                <div id="imaginary_container">
+                    <div class="input-group stylish-input-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                        <span class="input-group-addon">
+                            <button type="submit">
+                                <span class="glyphicon glyphicon-search"></span>
+                            </button>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
             <legend>För våra hyresgäster</legend>
             <p>Här kan ni hitta svar på de vanligaste frågorna vi får. Har du fortfarande inte fått svar på din fråga är du välkommen att kontakta oss på telefon eller e-post.</p>
             <div class="panel-group" id="accordion">
