snyggat till i frågor och svar

--- a/design/design/Views/Home/FragorOchSvar.cshtml
+++ b/design/design/Views/Home/FragorOchSvar.cshtml
@@ -3,7 +3,8 @@
     ViewBag.Title = "FragorOchSvar";
 }
 
-<h2>Frågor Och Svar</h2>
+<center><h2>Frågor Och Svar</h2></center>
+
 <div class="maincontainer">
 
         <div class="row">
@@ -21,9 +22,10 @@
             </div>
         </div>
     </div>
+<br />
+<br />
 
             <legend>För våra hyresgäster</legend>
-            <p>Här kan ni hitta svar på de vanligaste frågorna vi får. Har du fortfarande inte fått svar på din fråga är du välkommen att kontakta oss på telefon eller e-post.</p>
             <div class="panel-group" id="accordion">
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -371,7 +373,7 @@
                             <a data-toggle="collapse" data-parent="#accordion" href="#collapse23">Övertagning av lägenhet</a>
                         </h4>
                     </div>
-                    <div id="collapse24" class="panel-collapse collapse">
+                    <div id="collapse23" class="panel-collapse collapse">
                         <div class="panel-body">
                             Din kompis kan naturligtvis lämna in en intresseanmälan men då vi har många sökande kan
                             vi inte garantera att det är just din kompis som får lägenheten. Bostadsanmälan
@@ -380,34 +382,35 @@
                 </div>
             </div>
             <legend>För kommande hyresgäster</legend>
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse25">Bostadskö</a>
-                    </h4>
-                </div>
-                <div id="collapse25" class="panel-collapse collapse">
-                    <div class="panel-body">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    </div>
-                </div>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse26">Intresseanmälan</a>
-                    </h4>
-                </div>
-                <div id="collapse26" class="panel-collapse collapse">
-                    <div class="panel-body">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    </div>
-                </div>
-            </div>
-
+           
+<div class="panel-group" id="accordion">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h4 class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapse24">Bostadskön</a>
+            </h4>
         </div>
+        <div id="collapse24" class="panel-collapse collapse">
+            <div class="panel-body">
+                texttexthökn ljkl
+            </div>
+        </div>
+    </div>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h4 class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapse25">Intresseanmälan</a>
+            </h4>
+        </div>
+        <div id="collapse25" class="panel-collapse collapse">
+            <div class="panel-body">
+                Vattnet i vattenlåsen avdunstar och då uppstår en obehaglig avloppslukt. Be en
+                granne eller vän att spola i handfat, badkar och wc när du är borta en längre tid, så
+                slipper du problemet.
+            </div>
+        </div>
+    </div>
+    </div>
+
+
 
