Fix på kontaktsidan och felanmälan

--- a/design/design/Views/Home/Kontakt.cshtml
+++ b/design/design/Views/Home/Kontakt.cshtml
@@ -3,16 +3,16 @@
     ViewBag.Title = "Kontakt";
 }
 
-<center><h2>Kontakt</h2></center>
+<center><h2 class="sidrubrik">Kontakt</h2></center>
 
 <div class="maincontainer">
     <div class="row">
-        <div class="col-sm-4">
-            <h3>John Ekströms bygg AB</h3>
+        <div class="col-sm-4 divleft">
+            <h3 class="red">John Ekströms bygg AB</h3>
             <p>
                 Org nr 556212-0468
-                Ormestagatan 1B
-                702 83 Örebrolk
+                <br />Ormestagatan 1B
+                <br />702 83 Örebrol
             </p>
             <style>
                 .google-maps {
@@ -34,18 +34,18 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2039.109769794727!2d15.24361931589036!3d59.26431508163614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465c145150000001%3A0xb770228f3dd33593!2sJohn+Ekstr%C3%B6ms+Bygg+AB!5e0!3m2!1ssv!2sse!4v1492021207736" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>            </div>
         </div>
         <div class="col-sm-4">
-            <h3>Kontorets Öppettider</h3>
+            <h3 class="red">Kontorets Öppettider</h3>
             <p>
-                Måndag - Fredag: 07:30-16.30
-                Telefontid: 09.00-16.00
-                Lunchstängt: 12.00-13.00
+                Måndag - Fredag: 07.30-16.30
+                <br />Telefontid: 09.00-16.00
+                <br />Lunchstängt: 12.00-13.00
             </p>
         </div>
-        <div class="col-sm-4">
-            <h3>Telefon</h3>
+        <div class="col-sm-3">
+            <h3 class="red">Telefon</h3>
             <p>
                 Telefon: 019 16 43 70
-                Jourtelefon efter kontorstid:<br />
+                <br />Jourtelefon efter kontorstid:<br />
                 010 470 57 58
         </div>
     </div>
