--- a/design/design/Content/bootstrap.css
+++ b/design/design/Content/bootstrap.css
@@ -1465,6 +1465,11 @@ dt {
 dd {
   margin-left: 0;
 }
+
+h3.red
+{
+    color:#e95123;
+}
 @media (min-width: 768px) {
   .dl-horizontal dt {
     float: left;
@@ -1475,9 +1480,22 @@ dd {
     text-overflow: ellipsis;
     white-space: nowrap;
   }
+  div.divleft{
+      margin-left:6%;
+  }
   div.leftdiv{
     margin-left: 10%;
+    margin-right: 5%;
+    /*border: 1px solid grey;*/
 }
+  div.rightdiv{
+       /*margin-left: 10%;
+    border: 1px solid grey;*/
+    margin-top: 5%;
+     border:1px solid #ddd;
+ border-bottom: 0px;
+  box-shadow: 0px 5px 5px #888888;
+  }
   .dl-horizontal dd {
     margin-left: 180px;
   }
