--- a/design/design/Views/Home/Felanmalan.cshtml
+++ b/design/design/Views/Home/Felanmalan.cshtml
@@ -5,16 +5,18 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2 class="sidrubrik">Felanmälan</h2>
+
 
 <div class="maincontainer">
+    <h2 class="sidrubrik">Felanmälan</h2>
+    <br />
     <div class="row">
-        <div class="col-md-6 leftdiv">
+        <div class="col-md-5 leftdiv">
             <div class="form-group">
                 <div>
                     <label>Namn: *</label>
                     <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                         <input name="state" placeholder="Namn" class="form-control" type="text">
                     </div>
                 </div>
@@ -23,7 +25,7 @@
                     <label>Företagsnamn:</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-                        <input name="state" placeholder="Adress" class="form-control" type="text">
+                        <input name="state" placeholder="Företagsnamn" class="form-control" type="text">
                     </div>
                 </div>
                 <br />
@@ -31,15 +33,7 @@
                     <label>Gatuadress: *</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-                        <input name="state" placeholder="Adress" class="form-control" type="text">
-                    </div>
-                </div>
-                <br />
-                <div>
-                    <label>Postnummer:</label>
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-                        <input name="state" placeholder="Adress" class="form-control" type="text">
+                        <input name="state" placeholder="Gatuadress" class="form-control" type="text">
                     </div>
                 </div>
                 <br />
@@ -47,23 +41,31 @@
                     <label>Postort:</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-                        <input name="state" placeholder="Adress" class="form-control" type="text">
+                        <input name="state" placeholder="Postort" class="form-control" type="text">
+                    </div>
+                </div>
+                <br />
+                <div>
+                    <label>Postnummer:</label>
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+                        <input name="state" placeholder="Postnummer" class="form-control" type="text">
                     </div>
                 </div>
                 <br />
                 <div>
                     <label>Telefonnummer:</label>
                     <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-                        <input name="state" placeholder="Adress" class="form-control" type="text">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
+                        <input name="state" placeholder="Telefonnummer" class="form-control" type="text">
                     </div>
                 </div>
                 <br />
                 <div>
-                    <label>Epost:</label>
+                    <label>E-postadress:</label>
                     <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-                        <input name="state" placeholder="Adress" class="form-control" type="text">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                        <input name="state" placeholder="E-postdress" class="form-control" type="text">
                     </div>
                 </div>
                 <br /><div>
@@ -94,6 +96,19 @@
 </div>
             </div>
         </div>
-        <div class="col-md-3">hejhej</div>
+        <div class="col-md-4 rightdiv">
+        <p style="font-size:large;"><b>På hemsidan kan du göra felanmälan dygnet runt.</b></p>
+            <h4>
+                <br />Du kan även ringa vårt kontor: 019-16 43 70.
+                <br />
+                <br />Kontorets öppettider:
+                <br />Måndag – Fredag kl: 07:30-16:30.
+                <br />Telefontid: 09:00-16:00.
+                <br />Lunchstängt mellan kl: 12:00-13:00.
+                <br />
+                <br />Efter kontorstid vid akuta ärenden,
+                <br />ring vår Jourtelefon: 010-4705758.
+            </h4>
+        </div>
     </div>
 </div>
